# bytecloak-rs

./: Cargo.toml
.github/workflows/: ci.yml
crypt-cloud/src/: drive.rs  error.rs  lib.rs
crypt-core/: Cargo.toml
crypt-core/benches/: encryption_benchmark.rs
crypt-core/src/: config.rs  error.rs  lib.rs
crypt-ui/: Cargo.toml
crypt-ui/src/: cli.rs  cli_builder.rs  directive.rs  error.rs  lib.rs
src/: main.rs
